correct spacing

--- a/src/components/Pages/Contact/Contact.css
+++ b/src/components/Pages/Contact/Contact.css
@@ -8,7 +8,7 @@
 .contact__form{
   display: grid;
   grid-template-rows: 1fr;
-  gap: 16px;
+  gap: 32px;
 }
 
 .contact__form-input{
@@ -24,12 +24,21 @@
   outline: none;
 }
 
+.contact__title{
+  margin-bottom: 40px;
+}
+
+.contact__subtitle{
+  /* margin-top: 80px; */
+}
+
 .contact__form-textarea{
   color: var(--color-text);
   background: transparent;
   border: none;
   border-bottom: 1px solid var(--color-subtitle);
   width: 100%;
+  resize: vertical;
   padding: 10px 0;
 
   min-height: 150px;
@@ -90,6 +99,7 @@
   background: var(--color-subtitle-50);
   border: solid 2px;
   border-color: var(--color-text);
+  cursor:wait;
 }
 
 .button-sent{
@@ -118,8 +128,25 @@
   gap: 32px;
 }
 
+input:disabled{
+  background: rgba(90, 90, 90, 0.189);
+  cursor:no-drop;
+}
+
+textarea:disabled{
+  background: rgba(90, 90, 90, 0.189);
+  cursor:no-drop;
+}
+
 @media (min-width: 768px){
   .container__social-media{
     grid-template-columns: 1fr auto;
+  }
+
+  .contact__subtitle{
+    width: 90%;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
 }
