--- a/src/components/Pages/Idla/Idla.css
+++ b/src/components/Pages/Idla/Idla.css
@@ -30,6 +30,9 @@
   align-items: center;
 }
 
+.span-2{
+  grid-column: span 2;
+}
 
 /* card  */
 
