--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,24 @@
   --font-size-navbar-menu: 1.5rem; /*24px 16px 16px*/
 }
 
+::-webkit-scrollbar{
+  width: 0.5em;
+}
+
+::-webkit-scrollbar-track{
+  background: rgb(18, 18, 18);
+  margin: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+  background: var(--color-subtitle);
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background: var(--color-text);
+}
+
 h6{
   /* font-family: serif; */
 }
@@ -280,8 +298,15 @@ a {
   justify-content: center;
 }
 
+.mt-40{
+  margin-top: 40px;
+}
+
 .mt-80{
   margin-top: 80px;
+}
+.mt-60{
+  margin-top: 60px;
 }
 
 .mb-16{
